force-app/main/default/objects/Dummy13__c/Dummy13__c.object-meta.xml
<CustomObject>
    <label>Dummy13</label>
    <nameField>
        <label>Dummy13 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy13</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>