force-app/main/default/objects/Dummy13__c/fields/FooBar038__c.field-meta.xml
<CustomField>
    <fullName>FooBar038__c</fullName>
    <label>FooBar038</label>
    <length>255</length>
    <type>Text</type>
</CustomField>