force-app/main/default/objects/Dummy13__c/fields/FooBar042__c.field-meta.xml
<CustomField>
    <fullName>FooBar042__c</fullName>
    <label>FooBar042</label>
    <length>255</length>
    <type>Text</type>
</CustomField>