force-app/main/default/objects/Dummy13__c/fields/FooBar045__c.field-meta.xml
<CustomField>
    <fullName>FooBar045__c</fullName>
    <label>FooBar045</label>
    <length>255</length>
    <type>Text</type>
</CustomField>